--- a/app/package.json
+++ b/app/package.json
@@ -10,12 +10,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@langchain/core": "^0.3.3",
+    "@langchain/openai": "^0.3.0",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "langchain": "^0.3.2",
     "lucide-react": "^0.445.0",
     "next": "14.2.13",
     "react": "^18",
